# D.R.O.N.A

./: .env.example  .gitattributes  .gitignore  DRONA_BUILD_PROMPT.md  FINAL_STEPS.md  PROGRESS.md  PROGRESS_TEMPLATE.md  README.md  alembic.ini  docker-compose.yml  e.txt  err.txt  o.txt  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
data/cards/: curriculum_tus.json  gesture_demonstrations.json  job_postings_nepal.json  onet_career_pathways.json  synthetic_advisory.json
data/manual_collection/: README.md  _template.json
data/processed/: onet_career_pathways_data_card.md  onet_career_pathways_data_card.yaml
docs/: COLAB_TRAINING_GUIDE.md  INTERACTING_WITH_DRONA.md  RUN_EVERYTHING.md  RUN_THE_DASHBOARD.md  STUDENT_RUNBOOK.md  SYSTEM_REFERENCE.md  architecture.md  bilingual_and_voice.md  data_ethics.md  demo_video_script.md  distributed_deployment.md  evaluation_guide.md  hardware_setup.md  phase1_plan.md  phase2_plan.md  research_papers.md  ros2_setup.md  ros2_topics_actions.md  sim_setup_gazebo.md  sim_setup_isaac.md  viva_prep.md  wsl_setup.md
docs/data_cards/: README.md  bls_oews.md  curriculum.md  esco.md  nepali_job_postings.md  nlfs.md  onet.md  synthetic_qa.md
drona/: __init__.py
drona/advising/: __init__.py  bias_detector.py  engine.py  graph.py  hf_client.py  llm_bias.py  llm_client.py  prompt_builder.py  rag_bias.py  remote.py  reranker.py  retriever.py  router_client.py  semantic_bias.py  verify.py
drona/api/: __init__.py  app.py  corpus_stats.py  curriculum_browse.py  dependencies.py  retrieval_trace.py  schemas.py  streaming.py
drona/contracts/: __init__.py
drona/dashboard/: __init__.py  app.py  components.py  session_bridge.py
drona/data_pipeline/: __init__.py  bls.py  curriculum.py  data_card.py  esco.py  ingest.py  nlfs.py  onet.py  pgvector_store.py  pinecone_store.py  synthetic.py
drona/db/: __init__.py  models.py  session.py
drona/evaluation/: __init__.py  bias_mitigation.py  citation_eval.py  harness.py  heldout_queries.py  heldout_queries_v2.py  metrics.py  queries.py  ragas_harness.py  stats.py
drona/finetune/: __init__.py  ablation.py  dataset.py  gold_set.py  lora_config.py  model_card.py  qa_generator.py  (+1 more)
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
notebooks/: 01_data_cleaning_preprocessing.ipynb  01_data_eda.ipynb  02_curriculum_parsing.ipynb  02_exploratory_data_analysis.ipynb  02_retrieval_benchmark.ipynb  03_embedding_quality.ipynb  03_feature_engineering_embeddings.ipynb  03_gesture_training.ipynb  04_bias_detection_benchmark.ipynb  04_model_training.ipynb  04_retrieval_ablations.ipynb  05_bias_detection_eval.ipynb  05_full_pipeline_demo.ipynb  05_model_evaluation_comparison.ipynb  06_lerobot_policies.ipynb  06_llm_response_quality.ipynb  07_lerobot_act_training.ipynb  07_serve_colab.ipynb  08_lerobot_diffusion_policy.ipynb  09_lora_finetune_phi35.ipynb  10_end_to_end_eval.ipynb  11_sim_to_real_handoff.ipynb  README.md
reports/: bias_detector_comparison.json  cleaning_report.json  evaluation_report.json  final_comparison.csv  heldout_bias_report.json  heldout_bias_report_v2.json  latency_sim.json  sft_metrics.json  span_tuning_cache.json  validation_report.json
ros2_ws/: README.md  requirements-perception.txt  requirements-robot.txt
ros2_ws/src/drona_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/drona_bringup/config/: hardware.yaml  params.yaml
ros2_ws/src/drona_bringup/isaac/: drona_isaac_stage.py
ros2_ws/src/drona_bringup/launch/: drona_edge.launch.py  drona_evaluation.launch.py  drona_gazebo.launch.py  drona_hardware.launch.py  drona_isaac.launch.py  drona_sim.launch.py  drona_system.launch.py
ros2_ws/src/drona_bringup/worlds/: drona_advising.sdf
ros2_ws/src/drona_description/: CMakeLists.txt  package.xml
ros2_ws/src/drona_description/launch/: display.launch.py
ros2_ws/src/drona_description/rviz/: drona.rviz
ros2_ws/src/drona_description/urdf/: drona_humanoid.urdf.xacro
ros2_ws/src/drona_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/drona_msgs/action/: ExecuteGesture.action
ros2_ws/src/drona_msgs/msg/: AdvisingQuery.msg  AdvisingResponse.msg  BiasFlag.msg  EngagementDetection.msg  GestureCommand.msg  GestureResult.msg  PathwayRecommendation.msg  RetrievalCitation.msg  SessionState.msg
ros2_ws/src/drona_msgs/srv/: Advise.srv  ExecuteGesture.srv
ros2_ws/src/drona_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/drona_ros/drona_ros/: advising_node.py  approach_node.py  arm_interface.py  diagnostics_node.py  gesture_node.py  gz_joint_relay.py  msg_bridge.py  orchestrator_node.py  perception_node.py  policy_node.py  speech_node.py
scripts/: _check_perception.py  _check_urdf_modes.sh  _extract_ollama.sh  _gemma_nepali_check.sh  advise.py  benchmark_bias_detectors.py  benchmark_latency.py  build_drona_ws.sh  collect_demonstrations.py  demo_bias_detection.py  download_onet.py  eval_heldout_bias.py  export_policies.py  fetch_curriculum.py  fetch_lms.py  fetch_softwarica_courses.py  generate_qa.py  import_public_postings.py  ingest_data.py  ingest_sources.py  make_placeholder_data.py  mock_brain.py  prepare_training_data.py  run_api.py  run_evaluation.py  run_latency_benchmark.sh  run_simulation.py  run_validation.py  scrape_jobs.py  scrape_nepali_jobs.py  setup_pi_edge.sh  setup_ros2_wsl.sh  smoke_test_sim.sh  test_advising_loop.sh  test_edge_launch.sh  test_gesture_motion.sh  test_interaction_loop.sh  test_locomotion.sh  test_nepali_rag.py  train_act.py  (+7 more)
tests/: test_bilingual_advising.py  test_contracts.py  test_deployment_export.py  test_goal_aware_advising.py  test_integration.py  test_rag_bias.py  test_remote_advisor.py  test_roman_nepali.py  test_ros_web_contract.py  test_ws1_data_pipeline.py  test_ws1b_phase1_sources.py  test_ws2_advising.py  test_ws2b_phase2.py  test_ws3_finetune.py  test_ws3_interaction.py  test_ws4_orchestrator.py  test_ws4_phase4_lerobot.py  test_ws5_dashboard.py  test_ws6_evaluation.py  test_ws7_phase7_eval.py
(+125 files in other folders)
