[project]
name = "drona"
version = "0.1.0"
description = "D.R.O.N.A. — Robotic Academic Student Advising System"
authors = [{name = "Trisan Wagle", email = "trisan.wagle@softwarica.edu.np"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core data + validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",

    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",

    # Document parsing
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "markdownify>=0.11.6",

    # ML / embeddings / retrieval (CPU-friendly defaults)
    "sentence-transformers>=2.7.0",
    "rank-bm25>=0.2.2",
    "chromadb>=0.4.24",

    # LLM client (Ollama is local, no API key)
    "ollama>=0.1.7",
    "httpx>=0.27.0",

    # Logging + CLI
    "rich>=13.7.0",
    "typer>=0.12.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
dashboard = [
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
]
robotics = [
    # Added in WS3/WS4 when robot work begins
    # "lerobot",  # installed separately from source
    # MuJoCo / mediapipe added when needed
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["drona*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
