[project]
name = "drona"
version = "0.1.0"
description = "D.R.O.N.A. — Robotic Academic Student Advising System"
authors = [{name = "Trisan Wagle", email = "trisan.wagle@softwarica.edu.np"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core data + validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",

    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",

    # Document parsing
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "markdownify>=0.11.6",

    # ML / embeddings / retrieval (CPU-friendly defaults)
    "sentence-transformers>=2.7.0",
    "rank-bm25>=0.2.2",
    "chromadb>=0.4.24",

    # LLM client (Ollama is local, no API key)
    "ollama>=0.1.7",
    "httpx>=0.27.0",

    # Logging + CLI
    "rich>=13.7.0",
    "typer>=0.12.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
dashboard = [
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
]

# --- Backend API + orchestration (Phase 2) ---
# FastAPI serves the advising endpoint with websocket streaming.
# LangChain/LangGraph orchestrate the RAG + bias-aware generation graph.
backend = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "sse-starlette>=2.1.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
]

# --- Production vector stores + relational DB (Phase 1) ---
# pgvector lives inside PostgreSQL 16; Pinecone is the managed cloud option.
# ChromaDB (in core deps) remains the zero-config local dev fallback.
db = [
    "sqlalchemy>=2.0.29",
    "psycopg[binary]>=3.1.18",
    "pgvector>=0.2.5",
    "alembic>=1.13.0",
    "pinecone-client>=4.0.0",
]

# --- Offline-only LLM API access (Phase 1/3) ---
# Gemini is used ONLY for synthetic Q&A generation and offline eval-set
# creation. It MUST NOT appear in the live advising request path.
genai = [
    "google-generativeai>=0.5.0",
    "google-cloud-aiplatform>=1.48.0",
]

# --- Evaluation (Phase 7) ---
eval = [
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "ragas>=0.1.7",
    "datasets>=2.18.0",
]

# --- LoRA fine-tuning (Phase 3, Colab T4 only — NOT for the 4GB local GPU) ---
finetune = [
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "trl>=0.9.6",
    "accelerate>=0.33.0",
    "datasets>=2.18.0",
    # bitsandbytes is Linux/CUDA-only; install in Colab, not pinned for Windows dev.
    # "bitsandbytes>=0.43.0",
]

robotics = [
    # Added in WS3/WS4 when robot work begins
    # "lerobot",  # installed separately from source
    # MuJoCo / mediapipe added when needed
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["drona*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer CLI idiom requires function calls (typer.Option/Argument) in defaults.
"scripts/*" = ["B008"]
# FastAPI dependency-injection idiom requires Depends() in defaults.
"drona/api/*" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
