<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drona_msgs</name>
  <version>0.1.0</version>
  <description>
    Custom ROS2 message and service definitions for D.R.O.N.A.
    (Demonstration-learned Robotic Oracle for Nurturing Aspirations)

    Messages mirror the Pydantic contracts in drona/contracts.py so that
    Phase 1 (Python-only) and Phase 2 (ROS2) share the same data model.
  </description>
  <maintainer email="trisan.wagle@softwarica.edu.np">Trisan Wagle</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
